# FastAPIproject

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  lesson.ipynb  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_05_18_1023_create_course_table_de97c1750f50.py  2026_05_26_0924_add_field_discount_212291201df8.py  2026_05_26_1015_создать_таблицу_video_0f138e0417f7.py  2026_05_28_2131_создать_связь_video_с_course_d5a9b15c6a87.py  2026_07_16_2154_create_user_table_2530be6e9ed2.py
app/: config.py  crud.py  database.py  main.py  models.py  repositories.py  schemas.py  services.py  uow.py
app/api/v1/endpoints/: course.py  literature.py  painting.py  user.py  video.py
app/models/: user.py
lessons/: lesson.py  lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py
theory/: 0_video_upload_formats.txt  1_uow.txt
