[tool.poetry]
name = "course_warehouse"
version = "0.1.0"
description = ""
authors = ["Nana <nanaolivia.nana@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.133.0"
uvicorn = { version = "0.41.0", extras = ["standard"] }
sqlalchemy = "2.0.47"
alembic = "1.18.4"
asyncpg = "0.31.0"
psycopg2-binary = "2.9.9"
pydantic = "2.12.5"
pydantic-settings = "2.1.0"
pyyaml = "6.0.3"
requests = "2.32.5"
python-dotenv = "1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
httpx = "0.28.1"
pytest-cov = "6.3.0"
debugpy = "1.8.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"